--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
