--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-reveal": "^1.2.2",
+    "react-scroll-parallax": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
