--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next dev -p 3333",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3333"
   },
   "dependencies": {
     "@next/font": "^13.1.6",
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.4"
   }
