--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3333",
-    "build": "next build",
-    "start": "next start -p 3333"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "^13.1.6",
